--- a/gradle.properties
+++ b/gradle.properties
@@ -1,53 +1,26 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-
-# The Minecraft version must agree with the Forge version to get a valid artifact
 minecraft_version=1.19.2
-# The Minecraft version range can use any release version of Minecraft as bounds.
-# Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
-# as they do not follow standard versioning conventions.
 minecraft_version_range=[1.19.2,1.20)
-# The Forge version must agree with the Minecraft version to get a valid artifact
-forge_version=43.3.5
-# The Forge version range can use any version of Forge as bounds or match the loader version range
+forge_version=43.2.23
 forge_version_range=[43,)
-# The loader version range can only use the major version of Forge/FML as bounds
 loader_version_range=[43,)
-# The mapping channel to use for mappings.
-# The default set of supported mapping channels are ["official", "snapshot", "snapshot_nodoc", "stable", "stable_nodoc"].
-# Additional mapping channels can be registered through the "channelProviders" extension in a Gradle plugin.
-#
-# | Channel   | Version              |                                                                                |
-# |-----------|----------------------|--------------------------------------------------------------------------------|
-# | official  | MCVersion            | Official field/method names from Mojang mapping files                          |
-# | parchment | YYYY.MM.DD-MCVersion | Open community-sourced parameter names and javadocs layered on top of official |
-#
-# You must be aware of the Mojang license when using the 'official' or 'parchment' mappings.
-# See more information here: https://github.com/MinecraftForge/MCPConfig/blob/master/Mojang.md
-#
-# Parchment is an unofficial project maintained by ParchmentMC, separate from Minecraft Forge.
-# Additional setup is needed to use their mappings, see https://parchmentmc.org/docs/getting-started
 mapping_channel=official
-# The mapping version to query from the mapping channel.
-# This must match the format required by the mapping channel.
 mapping_version=1.19.2
-
-
-# The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
-# Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=schematicdisplay
-# The human-readable display name for the mod.
-mod_name=SchematicDisplay
-# The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
+mod_id=emi_create_schematics
+mod_name=EMI: Create Schematics
 mod_license=All-Rights-Reserved
-# The mod version. See https://semver.org/
 mod_version=1.0.0
-# The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
-# This should match the base package used for the mod sources.
-# See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.frozenblock.liukrast
-# The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=LiukRast
-# The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Bored by having to close currently open GUIs to check your Create's schematics items list? Easly display it in your REI/JEI UIs
+mod_description=Bored to switch between crafting and Create's clipboard? Save all items from a clipboard to EMI: Favourites!\n-> Also shows items amount!
+
+
+create_minecraft_version = 1.19.2
+flywheel_minecraft_version =  1.19.2
+create_version = 0.5.1.c-37
+flywheel_version = 0.6.9-18
+registrate_version = MC1.19-1.1.5
+jei_version = 11.5.0.297
+emi_version = 1.0.24+1.19.2
