--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
-minecraft_version=1.19.2
-minecraft_version_range=[1.19.2,1.20)
-forge_version=43.2.23
-forge_version_range=[43,)
-loader_version_range=[43,)
+minecraft_version=1.20.1
+minecraft_version_range=[1.20.1,1.21)
+forge_version=47.2.19
+forge_version_range=[47,)
+loader_version_range=[47,)
 mapping_channel=official
-mapping_version=1.19.2
+mapping_version=1.20.1
 mod_id=emi_create_schematics
 mod_name=EMI: Create Schematics
 mod_license=All-Rights-Reserved
@@ -17,10 +17,8 @@ mod_authors=LiukRast
 mod_description=Bored to switch between crafting and Create's clipboard? Save all items from a clipboard to EMI: Favourites!\n-> Also shows items amount!
 
 
-create_minecraft_version = 1.19.2
-flywheel_minecraft_version =  1.19.2
-create_version = 0.5.1.c-37
-flywheel_version = 0.6.9-18
-registrate_version = MC1.19-1.1.5
-jei_version = 11.5.0.297
-emi_version = 1.0.24+1.19.2
+create_version = 0.5.1.f-27
+flywheel_version = 0.6.10-7
+registrate_version = MC1.20-1.3.3
+jei_version = 15.2.0.27
+emi_version = 1.1.4+1.20.1
