--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@ buildscript {
     repositories {
         maven { url = 'https://maven.minecraftforge.net' }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
-
         mavenCentral()
     }
     dependencies {
@@ -44,11 +43,7 @@ minecraft {
                 }
             }
         }
-
-        client {
-            property 'forge.enabledGameTestNamespaces', mod_id
-        }
-
+        client {property 'forge.enabledGameTestNamespaces', mod_id}
         server {
             property 'forge.enabledGameTestNamespaces', mod_id
             args '--nogui'
@@ -90,17 +85,13 @@ repositories {
 
     maven {
         // JEI
-        name 'Progwm16 maven'
-        url 'https://dvs1.progwml6.com/files/maven'
+        name = 'Progwm16 maven'
+        url = 'https://maven.blamejared.com/'
     }
 
     maven {
         name = "TerraformersMC"
         url = "https://maven.terraformersmc.com/"
-    }
-
-    flatDir {
-        dirs 'libs'
     }
 }
 
@@ -108,8 +99,8 @@ dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
 
-    implementation fg.deobf("com.simibubi.create:create-${create_minecraft_version}:${create_version}:slim") { transitive = false }
-    implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${flywheel_minecraft_version}:${flywheel_version}")
+    implementation fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
+    implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
     implementation fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
     implementation fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
